# LLM-Reliability-Evaluation-and-Council-Chat

./: .gitignore  Cargo.toml  README.md  clean_ascii.py  run_experiment.ps1
.agent/artifacts/: implementation_plan.md
config/: council_models.json  council_smoke_prompts.json  default.json
crates/api-server/: Cargo.toml
crates/api-server/src/: handlers.rs  main.rs  state.rs
crates/audit/: Cargo.toml
crates/audit/src/: logger.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: chunker.rs  hasher.rs  lib.rs  normalizer.rs  service.rs
crates/models/: Cargo.toml
crates/models/src/: chunk.rs  config.rs  council.rs  document.rs  errors.rs  evaluation.rs  lib.rs  model_output.rs  retrieval.rs
crates/retrieval/: Cargo.toml
crates/retrieval/src/: engine.rs  lib.rs  store.rs
python/: pyproject.toml
python/rlrgf/: __init__.py  __main__.py  agent_runtime.py  audit.py  classifier.py  council.py  council_chatbot.py  council_runtime.py  council_runtime_config.py  council_runtime_inference_adapter.py  council_runtime_prompts.py  council_runtime_schemas.py  council_runtime_scoring.py  dashboard.py  execution_state.py  guardrails.py  inference.py  metrics.py  models.py  pipeline.py  planner.py  policies.py  predictor.py  refiner.py  reporting.py  run_council_runtime.py  run_council_runtime_smoke.py  run_experiment.py  runtime_dependencies.py  runtime_registry.py  synthetic.py  verifier.py
python/rlrgf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_agent_runtime.py  test_classifier_modes.py  test_council_contract.py  test_council_runtime_adapter.py  test_council_runtime_adapter_selection.py  test_council_runtime_adversarial.py  test_council_runtime_config.py  test_council_runtime_execution_modes.py  test_council_runtime_flow.py  test_council_runtime_smoke.py  test_dashboard_runtime_modes.py  test_dependencies_and_compat.py  test_entrypoint.py  test_inference_identity.py  test_inference_loading.py  test_pipeline_metrics.py  test_predictor_missingness.py  test_runtime_dependencies.py  test_runtime_registry.py  test_synthetic.py
sql/: schema.sql
