[project]
name = "rlrgf"
version = "0.1.0"
description = "RAG-LLM Reliability Evaluation and Governance Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0",
    "transformers>=4.43",
    "accelerate>=0.24",
    "bitsandbytes>=0.41; sys_platform == 'linux'",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "regex>=2023.0",
    "rapidfuzz>=3.0",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "pydantic>=2.0",
    "httpx>=0.25",
    "rich>=13.0",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]
