[package]
name = "rlrgf-api-server"
version.workspace = true
edition.workspace = true

[dependencies]
rlrgf-models = { path = "../models" }
rlrgf-ingestion = { path = "../ingestion" }
rlrgf-retrieval = { path = "../retrieval", features = ["qdrant"] }
rlrgf-audit = { path = "../audit", features = ["postgres"] }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
