[package]
name = "rlrgf-ingestion"
version.workspace = true
edition.workspace = true

[dependencies]
rlrgf-models = { path = "../models" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tiktoken-rs = { workspace = true }
regex = { workspace = true }
